# painel-autoral-para-games

./: .gitignore  README.md  iniciar.bat  main.py  pyproject.toml  requirements.txt
docs/: arquitetura.md
